# winsocat

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  RELEASE-CHECKLIST.md  flake.nix  rust-toolchain.toml
.github/workflows/: publish-executable-on-release.yaml  release.yml  unit-test.yml
crates/smb2-pipe/: Cargo.toml
crates/smb2-pipe/src/: auth.rs  client.rs  lib.rs  ntlm.rs  session.rs  transport.rs
crates/smb2-pipe/src/protocol/: close.rs  create.rs  header.rs  logoff.rs  mod.rs  negotiate.rs  read.rs  session_setup.rs  tree_connect.rs  tree_disconnect.rs  write.rs
crates/smb2-pipe/tests/: integration_tests.rs
crates/winsocat/: Cargo.toml
crates/winsocat/src/: lib.rs  main.rs  relay.rs
crates/winsocat/src/endpoint/: exec.rs  hvsock.rs  mod.rs  serial.rs  smb_pipe.rs
helpers/: echo_helper.rs
src/: address.rs  main.rs
src/endpoint/: hvsock.rs  mod.rs  npipe.rs  serial.rs  stdio.rs  tcp.rs  unix.rs  wsl.rs
tests/: integration_tests.rs
