[package]
name = "winsocat"
version = "0.1.0"
edition = "2021"
description = "socat-like relay program"
license = "MIT"
repository = "https://github.com/hardselius/winsocat"

[[bin]]
name = "winsocat"
path = "src/main.rs"

[[bin]]
name = "echo_helper"
path = "helpers/echo_helper.rs"

[lib]
name = "winsocat"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-serial = "5"
anyhow = "1"
async-trait = "0.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Networking_WinSock",
] }
socket2 = "0.5"
uuid = "1"
